--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,19 @@
 .error {
   color: red;
 }
+
+.w-3 {
+  width: 3%;
+}
+.w-5 {
+  width: 5%;
+}
+.w-10 {
+  width: 10%;
+}
+.w-20 {
+  width: 20%;
+}
+.w-30 {
+  width: 30%;
+}
